// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile-flyout/ProfileFlyout renders with all props 1`] = `
<div
  className="hig__flyout-v1 hig__flyout-v1--top-left"
>
  <div
    className="hig__flyout-v1__action"
  >
    <button
      className="hig__profile-flyout__button"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="Avatar for Anonymous User"
        className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--turquoise"
        role="img"
      >
        <span
          aria-hidden="true"
          className="hig__avatarV2__initials"
        >
          AU
        </span>
      </span>
    </button>
  </div>
  <div
    className="hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          fill="#d4dbe1"
          points="0,12 12,0 24,12"
        />
        <polygon
          fill="#fff"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="hig__flyout-v1__panel-container__inner"
      />
    </div>
  </div>
</div>
`;

exports[`profile-flyout/ProfileFlyout renders with no props 1`] = `
<div
  className="hig__flyout-v1 hig__flyout-v1--hidden hig__flyout-v1--top-left"
>
  <div
    className="hig__flyout-v1__action"
  >
    <button
      className="hig__profile-flyout__button"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-label="Avatar for Anonymous User"
        className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--turquoise"
        role="img"
      >
        <span
          aria-hidden="true"
          className="hig__avatarV2__initials"
        >
          AU
        </span>
      </span>
    </button>
  </div>
  <div
    className="hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          fill="#d4dbe1"
          points="0,12 12,0 24,12"
        />
        <polygon
          fill="#fff"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="hig__flyout-v1__panel-container__inner"
      />
    </div>
  </div>
</div>
`;
